--- a/mluilias.css
+++ b/mluilias.css
@@ -351,10 +351,45 @@ div.ilMainHeader {
 	position: relative
 }
 
+div.ilMainHeader > div:first-child {
+	margin: .7em 0;
+}
+
+div.ilMainHeader div:first-child img {
+	width: 153px;
+	height: 80px;
+	-moz-opacity: 0.5;
+	-khtml-opacity: 0.5;
+	opacity: 0.5;
+	filter: alpha(opacity=50);
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+}
+
+img.mlu-siegel {
+	-moz-opacity: 0.3;
+	-khtml-opacity: 0.3;
+	opacity: 0.3;
+	filter: alpha(opacity=30);
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+	-webkit-transition: opacity .4s ease-in-out;
+	-moz-transition: opacity .4s ease-in-out;
+	-o-transition: opacity .4s ease-in-out;
+	transition: opacity .4s ease-in-out;
+}
+
+a:hover img.mlu-siegel {
+	-moz-opacity: 1;
+	-khtml-opacity: 1;
+	opacity: 1;
+	filter: alpha(opacity=100);
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+}
+
 div.ilTopTitle {
 	color: #8a8a8a;
 	padding-top: 0;
-	margin-top: 1.5em
+	margin-top: 1.5em;
+	max-width: 70%;
 }
 
 div.ilTopTitle span {
@@ -363,9 +398,53 @@ div.ilTopTitle span {
 }
 
 div.ilLogin {
-	padding-right: 0;
-	float: right;
+	padding: 0 1em;
+	white-space: normal;
+	text-align: center;
+	position: absolute;
+	right: 0;
+	top: 0;
+	min-width: 320px;
+	color: #5f6357;
+	color: rgba(68, 68, 68, .8);
+	text-shadow: 0 1px 0 rgba(255,255,255,.5);
+	background: #9bc34b;
+	background: -moz-linear-gradient(top, #9bc34b 0%, #92b948 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#9bc34b), color-stop(100%,#92b948));
+	background: -webkit-linear-gradient(top, #9bc34b 0%,#92b948 100%);
+	background: -o-linear-gradient(top, #9bc34b 0%,#92b948 100%);
+	background: -ms-linear-gradient(top, #9bc34b 0%,#92b948 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9bc34b', endColorstr='#92b948',GradientType=0 );
+	background: linear-gradient(top, #9bc34b 0%,#92b948 100%);
+	-webkit-border-bottom-right-radius: 7px;
+	-webkit-border-bottom-left-radius: 7px;
+	-moz-border-radius-bottomright: 7px;
+	-moz-border-radius-bottomleft: 7px;
+	border-bottom-right-radius: 7px;
+	border-bottom-left-radius: 7px;
+	border: 1px solid #86a841;
+	border-bottom-color: #718f38;
+	border-top: none;
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,.2);
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,.2);
+	box-shadow: 0 1px 3px rgba(0,0,0,.2);
 }
+
+	div.ilLogin a {
+		color: #005133;
+		text-shadow: 0 1px 0 rgba(255,255,255,.5);
+	}
+	
+		div.ilLogin a:active {
+			color: #fff;
+			text-shadow: 0 -1px 0 #444;
+		}
+
+	div.ilLogin span.il_menu {
+		padding-left: 0;
+		min-width: 390px;
+		display: block;
+	}
 
 div.ilMainMenuSearch {
 	margin: 0;
@@ -422,40 +501,7 @@ input.ilMainMenuSearchSubmit {
 	input.ilMainMenuSearchSubmit:active {
 		top: 6px
 	}
-
-div.ilMainHeader > div:first-child {
-	margin: .7em 0;
-}
-
-div.ilMainHeader div:first-child img {
-	width: 153px;
-	height: 80px;
-	-moz-opacity: 0.5;
-	-khtml-opacity: 0.5;
-	opacity: 0.5;
-	filter: alpha(opacity=50);
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-}
-
-img.mlu-siegel {
-	-moz-opacity: 0.3;
-	-khtml-opacity: 0.3;
-	opacity: 0.3;
-	filter: alpha(opacity=30);
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
-	-webkit-transition: opacity .4s ease-in-out;
-	-moz-transition: opacity .4s ease-in-out;
-	-o-transition: opacity .4s ease-in-out;
-	transition: opacity .4s ease-in-out;
-}
-
-a:hover img.mlu-siegel {
-	-moz-opacity: 1;
-	-khtml-opacity: 1;
-	opacity: 1;
-	filter: alpha(opacity=100);
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-}
+	
 
 /* Navigation
 --------------------------------*/
@@ -1189,6 +1235,30 @@ div.ilMemberViewMainHeader h4 {
 
 @media only screen and (max-width: 480px) {
 
+	div.ilMainHeader > div:first-child {
+		float: none !important;
+		margin-bottom: 0;
+		padding-bottom: 0;
+	}
+	
+		div.ilMainHeader div:first-child img {
+			margin: 1em auto;
+			margin-bottom: 0;
+			display: block;
+		}
+	
+	div.ilTopTitle {
+		text-align: center;
+		margin-top: 0 !important;
+		max-width: 100%;
+		width: 100%;
+		white-space: normal;
+		margin-bottom: 1em
+	}
+	
+	div.ilLogin {
+		left: 0;
+	}
 
 }
 
@@ -1197,5 +1267,14 @@ div.ilMemberViewMainHeader h4 {
 	.ilFrame {
 	  	font-size: .9em
 	  }
+	 
+	div.ilMainHeader div:first-child img {
+		width: 90px;
+		height: 47px;
+	}
+	
+	div.ilTopTitle {
+		margin-top: .7em;
+	}
   
 }
