--- a/mluilias.css
+++ b/mluilias.css
@@ -307,8 +307,7 @@ a.ilEditSubmit:active {
 
 /* Layout 
 --------------------------------*/
-div.ilFrame,
-body.kiosk {
+div.ilFrame {
 	max-width: 1024px;
 	margin: 0 auto;
 	padding: 0 1%;
@@ -829,7 +828,8 @@ td.calmininext,
 td.calminiprev,
 div.ilc_page_tnav_TopNavigation, th.ilc_page_tnav_TopNavigation,
 table.ilc_page_cont_PageContainer, th.ilc_page_cont_PageContainer,
-div.ilc_page_bnav_BottomNavigation, th.ilc_page_bnav_BottomNavigation {
+div.ilc_page_bnav_BottomNavigation, th.ilc_page_bnav_BottomNavigation,
+.questionPrintview {
 	border: none !important;
 }
 
@@ -909,19 +909,20 @@ td.ilExpBody {
 
 body.kiosk {
 	overflow: visible;
-	padding: 4%;
-	margin: 3em auto;
-	max-width: 890px
   	text-shadow: 0 1px 0 #fff;
 	height: 100%;
 	color: #6f5f3f;
-	overflow: visible;
-	position: relative;
+	padding: 4%;
+	max-width: 840px;
 	z-index: 0;
+	margin: 2% auto;
+	position: relative;
+	min-height: 300px;
 }
 
 /* Paper background */
 /* https://github.com/kremalicious/csspaperstack */
+
 body.kiosk,
 body.kiosk:before,
 body.kiosk:after {
@@ -951,22 +952,16 @@ body.kiosk:after {
 	}
 
 	body.kiosk:before {
-		left: -0.5%;
-		-webkit-transform: rotate(2deg);
-		-moz-transform: rotate(2deg);
-		-o-transform: rotate(2deg);
-		transform: rotate(2deg);
-		z-index: -1;
+		left: 1%;
+		z-index: -2;
+		top: 1%;
+		height: 102%;
 	}
 
 	body.kiosk:after {
-		width: 99.6%;
-		left: 0.7%;
-		-webkit-transform: rotate(4deg);
-		-moz-transform: rotate(4deg);
-		-o-transform: rotate(4deg);
-		transform: rotate(4deg);
+		left: -0.5%;
 		z-index: -2;
+		top: 2%;
 	}
 
 .kiosk table.fullwidth,
@@ -992,48 +987,133 @@ body.kiosk:after {
 }
 
 #workingtime {
-	margin: 1em 0 2em 0
+	margin: 1em 0 2em 0;
+	line-height: 1.7em;
+}
+
+#timeleft {
+	font-size: 1.7em
 }
 
 #testbuttons {
 	
 }
+	
+	.testproceed,
+	.questionactions {
+		width: 50%;
+		float: left;
+	}
+	
+	.questionactions {
+		float: right;
+		text-align: right;
+	}
 
 	#testbuttons input.submit,
 	#bottomtestbuttons input.submit {
-		float: left
+		margin: 2%;
+		margin-left: 0;
+		display: inline-block;
+		min-width: 180px
 	}
-	
-	#prevbutton, #bottomprevbutton {
-		-moz-opacity: 0.5;
-		-khtml-opacity: 0.5;
-		opacity: 0.5;
-		filter: alpha(opacity=50);
-		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-	}
-	
-	#summarybutton, #bottomsummarybutton {}
-	
-	#postponebutton, #bottompostponebutton {}
-	
-	#nextbutton, #bottomnextbutton {}
 
-	#tst_output td[align=left]:hover {
+	#prevbutton, #bottomprevbutton,
+	#summarybutton, #bottomsummarybutton,
+	#postponebutton, #bottompostponebutton {
+		-moz-opacity: 0.6;
+		-khtml-opacity: 0.6;
+		opacity: 0.6;
+		filter: alpha(opacity=60);
+		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+	}
+	
+	input.submit#summarybutton, input.submit#bottomsummarybutton,
+	input.submit#postponebutton, input.submit#bottompostponebutton {
+		margin-left: 2%;
+		margin-right: 0
+	}
+	
+	input.submit#prevbutton, input.submit#bottomprevbutton,
+	input.submit#summarybutton, input.submit#bottomsummarybutton {
+		
+	}
+	
+	#tst_output input.submit:hover {
 		-moz-opacity: 1;
 		-khtml-opacity: 1;
 		opacity: 1;
 		filter: alpha(opacity=100);
 		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
 	}
-
-#tst_output input.submit {
-	display: block;
-	min-width: 190px
-}
+	
+	#prevbutton, #bottomprevbutton {
+		
+	}
+	
+	#bottomtestbuttons {
+		margin-top: 0
+	}
+	
+	#nextbutton, #bottomnextbutton {}
+	
+	#postponebutton, #bottompostponebutton {}
+	
+	/* Question List */
+	#tst_left {
+		float: left;
+		width: 14%;
+		height: 100%;
+		margin-right: 3%;
+		margin-top: .5em;
+		padding-right: 2%;
+		border-right: 1px solid #e4e0d6
+	}
+	
+	#tst_left h1 {
+		margin-bottom: 1em
+	}
+	
+	div.shortlist input[type="submit"] {
+		color: #6aa101;
+		padding: .3em;
+		border-bottom: 1px solid #e4e0d6;
+		width: 100%;
+		position: relative;
+		font-size: .9em
+	}
+	
+	div.shortlist input[type="submit"]:hover,
+	div.shortlist input[type="submit"].active {
+		background-color: #FBFBFB;
+		text-decoration: none
+	}
+	
+	div.shortlist input[type="submit"]:active {
+		top: 1px
+	}
+	
+	div.shortlist input[type="submit"].answered {
+		font-weight: normal
+	}
+	
+	.kiosk div.ilTableCommandRow, .kiosk div.ilTableCommandRowTop {
+		background: transparent
+	}
+	
+	#kioskOptions + p {
+		font-weight: bold;
+	}
+	
+	p#testcancel {
+		clear: both;
+		text-align: right;
+		margin-top: 2em
+	}
 
 div#ilc_Page {
 	margin: 2em 0;
-	background: #fff;
+	background-color: #FBFBFB;
 	border-color: #e4dfd6;
 	padding: 1% 3%;
 	-webkit-border-radius: 10px;
@@ -1041,7 +1121,12 @@ div#ilc_Page {
 	border-radius: 10px;
 }
 
-h1.ilc_page_title_PageTitle {
+.kiosk .warning {
+	margin-bottom: 2em;
+}
+
+h1.ilc_page_title_PageTitle,
+.questionTitle {
 	border-bottom: 3px solid #9bc34b;
 }
 
@@ -1305,7 +1390,8 @@ div.ilMemberViewMainHeader h4 {
 
 @media only screen and (max-width: 768px) {
   
-	.ilFrame {
+	.ilFrame,
+	body.kiosk {
 	  	font-size: .9em;
 	  	line-height: 1.2em
 	  }
