--- a/mluilias.css
+++ b/mluilias.css
@@ -1362,14 +1362,26 @@ div.ilMemberViewMainHeader h4 {
 
 .warning {
 	text-align: center;
-	background: #fbc8c8;
-	background: rgba(255, 0, 0, .2);
+	background-color: #fbc8c8;
+	background-color: rgba(255, 0, 0, .2);
+	background-image: -moz-linear-gradient(top, rgba(255,255,255,0.8) 0%, rgba(255,255,255,0.2) 2%, rgba(255,255,255,0) 100%);
+	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.8)), color-stop(2%,rgba(255,255,255,0.2)), color-stop(100%,rgba(255,255,255,0)));
+	background-image: -webkit-linear-gradient(top, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0.2) 2%,rgba(255,255,255,0) 100%);
+	background-image: -o-linear-gradient(top, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0.2) 2%,rgba(255,255,255,0) 100%);
+	background-image: -ms-linear-gradient(top, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0.2) 2%,rgba(255,255,255,0) 100%);
+	background-image: linear-gradient(top, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0.2) 2%,rgba(255,255,255,0) 100%);
 	border: 1px solid red;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
 	padding: 1em;
-	color: #444;
+	margin: 1em 0;
+	color: #8e2f2f;
+	text-shadow: 0 1px 0 rgba(255,255,255,.4);
+	display: block;
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,.2);
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,.2);
+	box-shadow: 0 1px 3px rgba(0,0,0,.2);
 }
 
 /* Non-semantic helper classes 
