--- a/mluilias.css
+++ b/mluilias.css
@@ -744,16 +744,6 @@ a.ilTreeView {
 	top: 200px;
 }
 
-div.ilPermaLink {
-	margin: 0
-}
-
-div.ilPermaLink div {
-	border-top: 1px solid #dbdbdb;
-	margin: 2em 0;
-	padding-top: .8em;
-}
-
 /* Main Content */
 
 table.ilTabContentOuter {
@@ -958,11 +948,22 @@ h3.ilFormHeader + div.ilFormInfo {
 
 /* Global Footer
 --------------------------------*/
+
+div.ilPermaLink {
+	margin: 0;
+	display: none;
+}
+
 #ilMainFooter {
 	font-size: .7em;
-	line-height: 1.3em;
+	line-height: 1.4em;
 	color: #a4a4a4;
-	margin: 2em 0
+	border-top: 1px solid #F0F0F0;
+	margin: 2em 0;
+	padding-top: 1em;
+	-webkit-box-shadow: inset 0 1px 0 #fff;
+	-moz-box-shadow: inset 0 1px 0 #fff;
+	box-shadow: inset 0 1px 0 #fff;
 }
 
 /* Kiosk Modus
