starting 4.2-wip: updated delos with most recent version, commented out most background-image declarations

--- a/mluilias.css
+++ b/mluilias.css
@@ -2,7 +2,7 @@
 Name: mluIlias
 URI: http://ilias.urz.uni-halle.de
 Description: Skin für Ilias an der MLU Halle-Wittenberg
-Version: 0.1
+Version: 4.2-wip
 Author: Matthias Kretschmann
 Author URI: http://mkretschmann.com
 */
